# anki-jpn-conjugations

./: .bumpversion.cfg  .gitignore  LICENSE.txt  README.md  makefile  prepare_zip.sh  pyproject.toml
.github/workflows/: pylint.yml  unittests.yml
addon/: __init__.py  config.json  manifest.json
anki_jpn/: __init__.py  adjectives.py  cli.py  config.py  decks.py  enums.py  loading_test.py  models.py  util.py  verbs.py
anki_jpn/resources/: back_template.html  front_template.html  insert_ending_spans.js  style.css
anki_jpn/resources/verbs/: back_template.html  style.css
doc/: ankiweb_description.md  config.md  release_notes.md
japanese_conjugation/: __init__.py  addon.py  adjectives.py  cli.py  config.py  decks.py  enums.py  manifest.json  models.py  util.py  verbs.py  version.py
japanese_conjugation/resources/: front_template.html
japanese_conjugation/verbs/: __init__.py  causative.py  causative_passive.py  passive.py  plain.py  polite.py  potential.py  stems.py  te.py
tests/: test_add_to_deck.py  test_adjective_classification.py  test_adjective_conjugation.py  test_deck_searcher.py  test_deck_updater.py  test_enum.py  test_models.py  test_util.py  test_utils.py  test_verb_classification.py  test_verb_conj_causative.py  test_verb_conj_causative_passive.py  test_verb_conj_passive.py  test_verb_conj_potential.py  test_verb_conjugation.py
