[build-system]
requires = ["setuptools==65"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Nathan Imse", email = "njimse@gmail.com"}
]
name = "anki-jpn"
description = "This is a set of tooling to allow for generating anki cards for learning/practicing Japanese"
version = "0.1.0"
requires-python = "==3.8.*"
readme = "README.md"
dependencies = [
    "genanki==0.13.1",
    "anki"
]
[project.optional-dependencies]
test = [
    "pytest",
    "js2py",
    "pylint"
]

[project.scripts]
anki-jpn = "anki_jpn.cli:main_cli"

[tool.setuptools]
packages = ["anki_jpn"]
[tool.setuptools.package-data]
anki_jpn = ["*.html", "*.css", "*.js"]