[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Nathan Imse", email = "njimse@gmail.com"}
]
name = "japanese-conjugation"
description = "This is a set of tooling to allow for generating anki cards for learning/practicing Japanese"
version = "1.2.0"
requires-python = ">=3.8,<3.10"
readme = "README.md"
dependencies = [
    "anki",
    "protobuf<=3.21;python_version<'3.9'"
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "js2py",
    "pylint",
    "cssutils"
]
dev = [
    "bumpversion"
]

[project.scripts]
anki-jpn = "japanese_conjugation.cli:main_cli"

[tool.setuptools]
packages = ["japanese_conjugation"]
[tool.setuptools.package-data]
japanese_conjugation = ["*.html", "*.css", "*.js"]